docs: 补充jvm文档和kubernetes1.5服务手动创建